feat: delete Fluentd PVC on drain success
Signed-off-by: GitHub <noreply@github.com>

--- a/charts/logging-operator/crds/logging.banzaicloud.io_loggings.yaml
+++ b/charts/logging-operator/crds/logging.banzaicloud.io_loggings.yaml
@@ -4452,6 +4452,8 @@ spec:
                             additionalProperties:
                               type: string
                             type: object
+                          deleteVolume:
+                            type: boolean
                           enabled:
                             type: boolean
                           image:
