--- a/charts/logging-operator/crds/logging.banzaicloud.io_loggings.yaml
+++ b/charts/logging-operator/crds/logging.banzaicloud.io_loggings.yaml
@@ -479,12 +479,12 @@ spec:
                                   type: string
                                 local_time:
                                   type: boolean
-                                multi_line_start_regexp:
-                                  type: string
                                 multiline:
                                   items:
                                     type: string
                                   type: array
+                                multiline_start_regexp:
+                                  type: string
                                 null_empty_string:
                                   type: boolean
                                 null_value_pattern:
@@ -492,16 +492,76 @@ spec:
                                 patterns:
                                   items:
                                     properties:
+                                      custom_pattern_path:
+                                        properties:
+                                          mountFrom:
+                                            properties:
+                                              secretKeyRef:
+                                                properties:
+                                                  key:
+                                                    type: string
+                                                  name:
+                                                    type: string
+                                                  optional:
+                                                    type: boolean
+                                                required:
+                                                - key
+                                                type: object
+                                            type: object
+                                          value:
+                                            type: string
+                                          valueFrom:
+                                            properties:
+                                              secretKeyRef:
+                                                properties:
+                                                  key:
+                                                    type: string
+                                                  name:
+                                                    type: string
+                                                  optional:
+                                                    type: boolean
+                                                required:
+                                                - key
+                                                type: object
+                                            type: object
+                                        type: object
                                       estimate_current_event:
                                         type: boolean
                                       expression:
                                         type: string
                                       format:
                                         type: string
+                                      grok_failure_key:
+                                        type: string
+                                      grok_name_key:
+                                        type: string
+                                      grok_pattern:
+                                        type: string
+                                      grok_patterns:
+                                        items:
+                                          properties:
+                                            keep_time_key:
+                                              type: boolean
+                                            name:
+                                              type: string
+                                            pattern:
+                                              type: string
+                                            time_format:
+                                              type: string
+                                            time_key:
+                                              type: string
+                                            timezone:
+                                              type: string
+                                          required:
+                                          - pattern
+                                          type: object
+                                        type: array
                                       keep_time_key:
                                         type: boolean
                                       local_time:
                                         type: boolean
+                                      multiline_start_regexp:
+                                        type: string
                                       null_empty_string:
                                         type: boolean
                                       null_value_pattern:
@@ -618,12 +678,12 @@ spec:
                                     type: string
                                   local_time:
                                     type: boolean
-                                  multi_line_start_regexp:
-                                    type: string
                                   multiline:
                                     items:
                                       type: string
                                     type: array
+                                  multiline_start_regexp:
+                                    type: string
                                   null_empty_string:
                                     type: boolean
                                   null_value_pattern:
@@ -631,16 +691,76 @@ spec:
                                   patterns:
                                     items:
                                       properties:
+                                        custom_pattern_path:
+                                          properties:
+                                            mountFrom:
+                                              properties:
+                                                secretKeyRef:
+                                                  properties:
+                                                    key:
+                                                      type: string
+                                                    name:
+                                                      type: string
+                                                    optional:
+                                                      type: boolean
+                                                  required:
+                                                  - key
+                                                  type: object
+                                              type: object
+                                            value:
+                                              type: string
+                                            valueFrom:
+                                              properties:
+                                                secretKeyRef:
+                                                  properties:
+                                                    key:
+                                                      type: string
+                                                    name:
+                                                      type: string
+                                                    optional:
+                                                      type: boolean
+                                                  required:
+                                                  - key
+                                                  type: object
+                                              type: object
+                                          type: object
                                         estimate_current_event:
                                           type: boolean
                                         expression:
                                           type: string
                                         format:
                                           type: string
+                                        grok_failure_key:
+                                          type: string
+                                        grok_name_key:
+                                          type: string
+                                        grok_pattern:
+                                          type: string
+                                        grok_patterns:
+                                          items:
+                                            properties:
+                                              keep_time_key:
+                                                type: boolean
+                                              name:
+                                                type: string
+                                              pattern:
+                                                type: string
+                                              time_format:
+                                                type: string
+                                              time_key:
+                                                type: string
+                                              timezone:
+                                                type: string
+                                            required:
+                                            - pattern
+                                            type: object
+                                          type: array
                                         keep_time_key:
                                           type: boolean
                                         local_time:
                                           type: boolean
+                                        multiline_start_regexp:
+                                          type: string
                                         null_empty_string:
                                           type: boolean
                                         null_value_pattern:
@@ -4871,12 +4991,12 @@ spec:
                               type: string
                             local_time:
                               type: boolean
-                            multi_line_start_regexp:
-                              type: string
                             multiline:
                               items:
                                 type: string
                               type: array
+                            multiline_start_regexp:
+                              type: string
                             null_empty_string:
                               type: boolean
                             null_value_pattern:
@@ -4884,16 +5004,76 @@ spec:
                             patterns:
                               items:
                                 properties:
+                                  custom_pattern_path:
+                                    properties:
+                                      mountFrom:
+                                        properties:
+                                          secretKeyRef:
+                                            properties:
+                                              key:
+                                                type: string
+                                              name:
+                                                type: string
+                                              optional:
+                                                type: boolean
+                                            required:
+                                            - key
+                                            type: object
+                                        type: object
+                                      value:
+                                        type: string
+                                      valueFrom:
+                                        properties:
+                                          secretKeyRef:
+                                            properties:
+                                              key:
+                                                type: string
+                                              name:
+                                                type: string
+                                              optional:
+                                                type: boolean
+                                            required:
+                                            - key
+                                            type: object
+                                        type: object
+                                    type: object
                                   estimate_current_event:
                                     type: boolean
                                   expression:
                                     type: string
                                   format:
                                     type: string
+                                  grok_failure_key:
+                                    type: string
+                                  grok_name_key:
+                                    type: string
+                                  grok_pattern:
+                                    type: string
+                                  grok_patterns:
+                                    items:
+                                      properties:
+                                        keep_time_key:
+                                          type: boolean
+                                        name:
+                                          type: string
+                                        pattern:
+                                          type: string
+                                        time_format:
+                                          type: string
+                                        time_key:
+                                          type: string
+                                        timezone:
+                                          type: string
+                                      required:
+                                      - pattern
+                                      type: object
+                                    type: array
                                   keep_time_key:
                                     type: boolean
                                   local_time:
                                     type: boolean
+                                  multiline_start_regexp:
+                                    type: string
                                   null_empty_string:
                                     type: boolean
                                   null_value_pattern:
@@ -5010,12 +5190,12 @@ spec:
                                 type: string
                               local_time:
                                 type: boolean
-                              multi_line_start_regexp:
-                                type: string
                               multiline:
                                 items:
                                   type: string
                                 type: array
+                              multiline_start_regexp:
+                                type: string
                               null_empty_string:
                                 type: boolean
                               null_value_pattern:
@@ -5023,16 +5203,76 @@ spec:
                               patterns:
                                 items:
                                   properties:
+                                    custom_pattern_path:
+                                      properties:
+                                        mountFrom:
+                                          properties:
+                                            secretKeyRef:
+                                              properties:
+                                                key:
+                                                  type: string
+                                                name:
+                                                  type: string
+                                                optional:
+                                                  type: boolean
+                                              required:
+                                              - key
+                                              type: object
+                                          type: object
+                                        value:
+                                          type: string
+                                        valueFrom:
+                                          properties:
+                                            secretKeyRef:
+                                              properties:
+                                                key:
+                                                  type: string
+                                                name:
+                                                  type: string
+                                                optional:
+                                                  type: boolean
+                                              required:
+                                              - key
+                                              type: object
+                                          type: object
+                                      type: object
                                     estimate_current_event:
                                       type: boolean
                                     expression:
                                       type: string
                                     format:
                                       type: string
+                                    grok_failure_key:
+                                      type: string
+                                    grok_name_key:
+                                      type: string
+                                    grok_pattern:
+                                      type: string
+                                    grok_patterns:
+                                      items:
+                                        properties:
+                                          keep_time_key:
+                                            type: boolean
+                                          name:
+                                            type: string
+                                          pattern:
+                                            type: string
+                                          time_format:
+                                            type: string
+                                          time_key:
+                                            type: string
+                                          timezone:
+                                            type: string
+                                        required:
+                                        - pattern
+                                        type: object
+                                      type: array
                                     keep_time_key:
                                       type: boolean
                                     local_time:
                                       type: boolean
+                                    multiline_start_regexp:
+                                      type: string
                                     null_empty_string:
                                       type: boolean
                                     null_value_pattern:
